--- a/thuedo/package.json
+++ b/thuedo/package.json
@@ -13,10 +13,12 @@
     "@babel/core": "7.20.5",
     "@babel/node": "7.20.5",
     "@babel/preset-env": "7.20.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.20.1",
     "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "2.0.20",
     "sequelize": "^6.6.2"
