--- a/package.json
+++ b/package.json
@@ -1,5 +1,33 @@
 {
+  "name": "thuedo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node src/server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3"
+    "@babel/core": "7.20.5",
+    "@babel/node": "7.20.5",
+    "@babel/preset-env": "7.20.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "1.20.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "ejs": "3.1.8",
+    "express": "4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^2.2.5",
+    "node-mailjet": "4.0.0",
+    "nodemon": "2.0.20",
+    "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
