--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@babel/node": "7.20.5",
     "@babel/preset-env": "7.20.2",
     "bcryptjs": "^2.4.3",
-    "body-parser": "1.20.1",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "3.1.8",
-    "express": "4.18.2",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "node-mailjet": "4.0.0",
     "nodemon": "2.0.20",
