--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.2.5",
     "node-mailjet": "4.0.0",
     "nodemon": "2.0.20",
+    "popups": "^1.1.3",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
