--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "node-mailjet": "4.0.0",
     "nodemon": "2.0.20",
     "popups": "^1.1.3",
-    "sequelize": "^6.6.2"
+    "query-types": "^0.1.4",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "sequelize-cli": "^6.2.0"
